<resources>
    <string name="app_name">Smart Garden</string>
    <string name="judul_splash">Smart Monitoring Cabai</string>
    <string name="deskripsi_bg_splash">Ini adalah gambar splashscreen</string>
    <string name="gambar_splash">gambar_splash</string>
    <string name="card_splash">content_splash</string>
    <string name="tv_splash1">tv_splash</string>
    <string name="text_splash">Take care of your plants</string>
    <string name="tv_splash2">tv_deskripsi</string>
    <string name="deskripsi_splash">Take a deep dive into your plants and what best helps them grow</string>
    <string name="bg_login">gambar_login</string>
    <string name="deskripsi_bg_login">Icon login</string>
    <string name="Login">Login</string>
    <string name="edt_login_email">edt_login_email</string>
    <string name="email">Email</string>
    <string name="edt_login_pass">edt_login_pass</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="checkbox_login">checkbox_login</string>
    <string name="checkbox_register">checkbox_register</string>
    <string name="checkbox">Remember Password</string>
    <string name="btn_login">btn_login</string>
    <string name="tv_new_user">new_user</string>
    <string name="new_user">New User?</string>
    <string name="tv_register">Register</string>
    <string name="bg_register">gambar_register</string>
    <string name="deskripsi_register">Icon register</string>
    <string name="edt_register_email">edt_register_email</string>
    <string name="edt_register_pass">edt_register_pass</string>
    <string name="password_register">Password</string>
    <string name="btn_register">btn_register</string>
    <string name="tv_new_register">new_user</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="have_account">Have Account ?</string>
    <string name="menu_home">Home</string>
    <string name="menu_statistic">History</string>
    <string name="menu_notification">Notifikasi</string>
    <string name="menu_setting">Setting</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_home">Welcome To Smart Garden</string>
    <string name="description_home">Icon dashboard</string>
    <string name="kelembaban_tanah">Kelembaban Tanah</string>
    <string name="nilai_kelembaban">70</string>
    <string name="ph_tanah">pH Tanah</string>
    <string name="suhu_ruang">Suhu Ruang</string>
    <string name="nilai_suhu">27</string>
    <string name="dc_kelembaban">Icon sensor kelembaban</string>
    <string name="dc_suhu">Icon sensor suhu</string>
    <string name="nilai_ph">6.0</string>
    <string name="dc_ph">Icon sensor ph tanah</string>
    <string name="val_email">Format Email Salah</string>
    <string name="val_password">Password Minimal 6 Karakter</string>
    <string name="harus_diisi">Email Harus Diisi</string>
    <string name="val_email_regis">Email Harus Diisi</string>
    <string name="val_regis">Email Harus Diisi</string>
    <string name="val_pass_regis">Password Harus Diisi</string>
    <string name="val_repass_regis">Konfirmasi Password Harus Diisi</string>
    <string name="val_pass">Password Minimal 6 Karakter</string>
    <string name="succes_regis">Register Berhasil</string>
    <string name="status">ON</string>
    <string name="deskripsi_pesan">gambar notif</string>
    <string name="sliderskelembaban">sliderskelembaban</string>
    <string name="slider_kelembaban_tanah">Slider Kelembaban Tanah</string>
    <string name="slider_suhu">Slider Suhu</string>
    <string name="slider_ph_tanah">Slider ph tanah</string>
    <string name="title_home">Welcome To</string>
    <string name="subtitle_home">My Garden</string>
    <string name="icon_notifikasi">Icon notifikasi</string>
    <string name="deskipsi_pesan">Isi Pesan</string>
    <string name="title">Title</string>
    <string name="title_det_kel">Batas Kelembaban Tanah (%)</string>
    <string name="batas_bawah_kel">Batas Bawah</string>
    <string name="batas_atas_kel">Batas Atas</string>
    <string name="title_suhu">Batas Suhu Ruang (°C)</string>
    <string name="batas_min_ph">Batas Min</string>
    <string name="batas_bawah_ph">Batas Bawah</string>
    <string name="batas_ph_tanah">Batas pH Tanah</string>
    <string name="batas_atas_ph">Batas Atas</string>
    <string name="batas_max_ph">Batas Max</string>
    <string name="batas_bawah_suhu">Batas Bawah</string>
    <string name="batas_atas_suhu">Batas Atas</string>
    <string name="logo">logo</string>
    <string name="logo_sensor">logo sensor</string>
    <string name="kelembaban">Kelembaban\nTanah</string>
    <string name="suhu">Suhu\nRuang</string>
    <string name="ph">PH \nTanah</string>
    <string name="pompa_air">Pompa air</string>
    <string name="kipas_angin">Kipas angin</string>
    <string name="penetral_ph">Penetral ph</string>
    <string name="title_tanaman_cabai">Tanaman Cabai</string>
    <string name="manfaat_cabai">Cabai dapat digunakan untuk mempercepat metabolisme tubuh, membantu fungsi jantung, membantu pertumbuhan rambut, meredakan rasa nyeri, menurunkan berat badan, melegakan sakit tenggorokan, mengatasi darah tinggi, menyembuhkan infeksi, dan mencegah kanker.</string>
    <string name="title_notif">Smart Garden</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="history">History</string>
    <string name="logout">Logout</string>
    <string name="cari_data">Cari Data</string>
    <string name="configuration_setting">Jenis Konfigurasi</string>
    <string name="choose_date_picker">Pilih Tanggal</string>
    <string name="date_sample">01 Agustus 2022</string>
    <string name="sample_message_notification">Nutrisi pada tanaman anda dibawah batas normal</string>
    <string name="new_notification">New</string>
    <string-array name="lable_stats">
        <item>Suhu Ruang</item>
        <item>Kelembaban Tanah</item>
        <item>pH Tanah</item>
    </string-array>
</resources>