<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    android:layout_margin="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_item_notification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_icon_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icon_notifikasi"
            android:src="@drawable/ic_round_notifications"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/app_name"
            android:textSize="16sp"
            android:textColor="@color/green_color"
            android:fontFamily="@font/poppins_semi_bold"
            app:layout_constraintStart_toEndOf="@id/iv_icon_notification"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_notification_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/new_notification"
            android:textStyle="bold"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_notification_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/date_sample"
            android:textSize="14sp"
            android:textStyle="bold"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@id/iv_icon_notification"
            app:layout_constraintTop_toBottomOf="@id/tv_app_name"/>

        <TextView
            android:id="@+id/tv_notification_message"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/sample_message_notification"
            android:textSize="15sp"
            android:fontFamily="@font/poppins"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/iv_icon_notification"
            app:layout_constraintTop_toBottomOf="@id/tv_notification_date"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>