<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/gambar_register"
        android:layout_width="320dp"
        android:layout_height="246dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/deskripsi_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ic_bg_registrasi" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_registrasi_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:hint="@string/email"
        app:startIconDrawable="@drawable/ic_person"
        app:layout_constraintTop_toBottomOf="@id/gambar_register"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_registrasi_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:hint="@string/password"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:layout_constraintTop_toBottomOf="@id/edt_registrasi_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edt_registrasi_repass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:hint="@string/konfirmasi_password"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        app:layout_constraintTop_toBottomOf="@id/edt_registrasi_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"/>
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/checkbox_registrasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkbox"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/poppins"
        app:layout_constraintTop_toBottomOf="@id/edt_registrasi_repass"/>

    <Button
        android:id="@+id/btn_registrasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Register"
        android:fontFamily="@font/poppins_semi_bold"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/green_color"
        app:layout_constraintTop_toBottomOf="@id/checkbox_registrasi"/>

    <TextView
        android:id="@+id/tv_new_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/have_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_registrasi"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="104dp"
        android:fontFamily="@font/poppins_semi_bold"
        android:padding="10dp"
        android:text="@string/Login"
        android:textColor="@color/green_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/tv_new_user"
        app:layout_constraintTop_toBottomOf="@id/btn_registrasi" />

</androidx.constraintlayout.widget.ConstraintLayout>