<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".SplashscreenActivity"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/splash_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semi_bold"
        android:paddingTop="30dp"
        android:text="@string/judul_splash"
        android:textAlignment="center"
        android:textColor="@color/green_color"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/gambar_splash"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/bg_splash"
        android:contentDescription="@string/deskripsi_bg_splash"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splash_judul" />

    <androidx.cardview.widget.CardView
        android:id="@+id/content_splash"
        android:layout_width="350dp"
        android:layout_height="280dp"
        app:cardCornerRadius="30dp"
        app:cardBackgroundColor="@color/green_color"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gambar_splash">

        <TextView
            android:id="@+id/tv_splash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semi_bold"
            android:gravity="center"
            android:paddingTop="20dp"
            android:text="@string/text_splash"
            android:textColor="@color/white"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/tv_deskripsi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="120dp"
            android:fontFamily="@font/poppins"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/deskripsi_splash"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>